0.8.1/_sources/gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_c_units.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_c_units.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_c_units.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_c_units.py:


Units manipulation examples
===========================

In this example, we show how units can be used in SpectroChemPy

.. GENERATED FROM PYTHON SOURCE LINES 16-19

.. code-block:: Python


    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 20-22

Spectrochempy can do calculations with units - it uses [pint](https://pint.readthedocs.io) to define and perform
operation on data with units.

.. GENERATED FROM PYTHON SOURCE LINES 24-27

Create quantities
-----------------
To create quantity, use for instance, one of the following expression:

.. GENERATED FROM PYTHON SOURCE LINES 27-33

.. code-block:: Python


    scp.Quantity("10.0 cm^-1")

    ""
    scp.Quantity(1.0, "cm^-1/hour")






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    1.0 cm<sup>-1</sup>⋅h<sup>-1</sup>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 34-35

or may be simpler using `ur`:

.. GENERATED FROM PYTHON SOURCE LINES 35-39

.. code-block:: Python


    ur = scp.ur
    10.0 * ur.meter / ur.gram / ur.volt






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    10.0 m⋅g<sup>-1</sup>⋅V<sup>-1</sup>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 40-41

`ur` stands for **unit registry**, which handle many type of units (and conversion between them)

.. GENERATED FROM PYTHON SOURCE LINES 43-47

Units for dataset
-----------------

When loading experimental dataset using the `read` method, units are generally attributed to coordinates and data

.. GENERATED FROM PYTHON SOURCE LINES 47-52

.. code-block:: Python


    ds = scp.read("wodger.spg")[0]
    prefs = scp.preferences
    prefs.figure.figsize = (7, 3)
    ds.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_001.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_001.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 53-55

* `wavenumbers` (`x` ) coordinates are here expressed in $cm^{-1}$
* and `data` are in absorbance ($a.u.$) units.

.. GENERATED FROM PYTHON SOURCE LINES 57-61

Convert between units
----------------------

Here are some examples

.. GENERATED FROM PYTHON SOURCE LINES 61-65

.. code-block:: Python


    x = 36 * ur("km/hr")
    x.to("cm/s")






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    1000.0 cm⋅s<sup>-1</sup>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 66-67

We can make the conversion *inplace* using *ito* instead of *to*

.. GENERATED FROM PYTHON SOURCE LINES 67-71

.. code-block:: Python


    x.ito("m/s")
    x






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    10.0 m⋅s<sup>-1</sup>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 72-73

Obviously you cannot convert between incompatible units

.. GENERATED FROM PYTHON SOURCE LINES 73-80

.. code-block:: Python


    try:
        x.to("hour")
    except Exception as e:
        scp.error_(e)
        # scp.error_(pint.DimensionalityError, e)








.. GENERATED FROM PYTHON SOURCE LINES 81-83

This, of course, also applies to NDDataset.
Let's try for the `x` coordinate. It is `wavenumber` in $cm^{-1}$ that can be transformed in $Hz$ for instance:

.. GENERATED FROM PYTHON SOURCE LINES 83-86

.. code-block:: Python


    ds.x.ito("terahertz")
    ds.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_002.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_002.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 87-89

We can also change the wavenumbers (or frequency units), to energy units or wavelength as
Spectrochempy (thanks to [pint](https://pint.readthedocs.io)) knows how to make the transformation.

.. GENERATED FROM PYTHON SOURCE LINES 89-92

.. code-block:: Python


    ds.x.ito("eV")
    ds.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_003.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_003.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 93-101

.. code-block:: Python

    try:
        ds.x.ito("nanometer")
    except Exception as e:
        scp.error_(Exception, e)

    ds.x = ds.x.to("nanometer")
    ds.x






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>Coord: [float64] nm (size: 5549)[x]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 5549</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> wavelength</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[    1667     1667 ... 1.536e+04 1.538e+04] nm</div></div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 102-103

.. code-block:: Python

    ds.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_004.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_004.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 104-106

`absorbance` units (the units of the data)
can also be transformed into `transmittance`

.. GENERATED FROM PYTHON SOURCE LINES 106-108

.. code-block:: Python

    ds.ito("transmittance")
    ds.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_005.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_005.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 109-110

back into `ansorbance

.. GENERATED FROM PYTHON SOURCE LINES 110-114

.. code-block:: Python

    ds.ito("absorbance")
    ds.x.ito("cm^-1")
    ds.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_006.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_006.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 115-117

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 117-119

.. code-block:: Python


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.667 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_c_units.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_c_units.ipynb <plot_c_units.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_c_units.py <plot_c_units.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_c_units.zip <plot_c_units.zip>`
